# DracoDownloader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  RELEASE_NOTES_v1.2.0.md  __init__.py  cli.py  config.py  core.py  engine.py  errors.py  logger.py  mirror_selector.py  optimizer.py  progress.py  pyproject.toml  requirements.txt  scheduler.py  steps.py
bittorrent/: __init__.py  bencode.py  dht.py  downloader.py  loaders.py  magnet.py  peer.py  seeding.py  trackers.py  utils.py
draco_downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
protocols/: __init__.py  base.py  ftp.py  http.py  m3u8.py  torrent.py
tests/: __init__.py  conftest.py  test_draco.py  test_features.py
