[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "draco-downloader"
version = "1.3.2"
description = "Pure Python multi-protocol download engine for AI Agents — zero GPL dependencies"
readme = "README.md"
authors = [
    {name = "Beichen890", email = "15530226931@163.com"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
keywords = ["download", "downloader", "http", "ftp", "bittorrent", "magnet", "m3u8", "hls", "ai", "agent"]
dependencies = [
    "aiohttp>=3.9.0,<4",
    "aioftp>=0.20.0,<0.21",
]

[project.optional-dependencies]
m3u8 = ["pycryptodome>=3.20,<4"]
full = ["pycryptodome>=3.20,<4"]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "aiofiles>=23.0",
]

[project.urls]
"Homepage" = "https://github.com/your-org/DracoDownloader"
"Bug Reports" = "https://github.com/your-org/DracoDownloader/issues"
"Source" = "https://github.com/your-org/DracoDownloader"
"Documentation" = "https://github.com/your-org/DracoDownloader#readme"

[project.scripts]
draco-download = "DracoDownloader.cli:main"

[tool.setuptools]
packages = ["DracoDownloader", "DracoDownloader.protocols", "DracoDownloader.bittorrent"]
package-dir = {"DracoDownloader" = "."}

[tool.setuptools.exclude-package-data]
"*" = ["tests*", "docs*", ".codewhale*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100
